--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -18,6 +18,15 @@
       "contributions": [
         "maintenance"
       ]
+    },
+    {
+      "login": "royalhub123",
+      "name": "royalhub123",
+      "avatar_url": "https://avatars.githubusercontent.com/u/168981505?v=4",
+      "profile": "https://github.com/royalhub123",
+      "contributions": [
+        "test"
+      ]
     }
   ],
   "contributorsPerLine": 7,
