--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -27,6 +27,15 @@
       "contributions": [
         "test"
       ]
+    },
+    {
+      "login": "Akhilnautiyal5",
+      "name": "Akhil Nautiyal",
+      "avatar_url": "https://avatars.githubusercontent.com/u/113812781?v=4",
+      "profile": "https://github.com/Akhilnautiyal5",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
