--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -36,6 +36,17 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "Vivek-Pokhriyal",
+      "name": "Vivek-Pokhriyal",
+      "avatar_url": "https://avatars.githubusercontent.com/u/202429019?v=4",
+      "profile": "https://github.com/Vivek-Pokhriyal",
+      "contributions": [
+        "code",
+        "test",
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7,
